--- a/src/components/CreatureModal.css
+++ b/src/components/CreatureModal.css
@@ -4,6 +4,7 @@
     width: 50%;
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .card:hover {
@@ -13,10 +14,18 @@
 
 .card img {
     width: 100px;
+    box-sizing: border-box;
     height: auto;
     background-color: #ffff;
     display: flex;
     margin: auto;
+    border: #000 solid 4px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.card img:hover {
+    transform: scale(0.9);
+    transition: transform 0.3s ease-in-out;
 }
 
 .card p {
@@ -25,23 +34,25 @@
 
 .card strong {
     width: 100%;
+    box-sizing: border-box;
     margin: 10px auto 0;
     padding: 5px 0;
     display: flex;
     justify-content: center;
     background-color: #20d;
+    border: #000 solid 3px;
 }
 
-.card .tarjet {
+.card .info {
     list-style-type: none;
     padding: 5px 0;
     width: 100%;
+    box-sizing: border-box;
     background-color: #20d;
+    border: #000 solid 3px;
 }
 
-.card .tarjet li {
+.card .info li {
     color: #fff;
     margin: 0 0 0 40px;
 }
-
-
