--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -1,4 +1,4 @@
-main {
+.Pokedex {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,6 +7,6 @@ main {
     margin: 0 0 10px 0;
 }
 
-.Pokedex img {
-    padding: 30px 0;
+.Pokedex h2 {
+    padding: 0 0 10px 0;
 }
