--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -10,3 +10,11 @@
 .Pokedex h2 {
     padding: 0 0 10px 0;
 }
+
+.loading,
+.no-results {
+  text-align: center;
+  color: #adadad;
+  font-size: 20px;
+  margin: 25px 0;
+}
