--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,149 +1,164 @@
   .logo img {
-    width: 250px;
-    height: auto;
-    transition: transform 0.6s ease;
-    padding: 10px;
+      width: 250px;
+      height: auto;
+      transition: transform 0.6s ease;
+      padding: 10px;
   }
 
   .logo img:hover {
-    transform: scale(1.05);
-    transition: transform 0.6s ease;
-    background: rgba(0, 0, 0, 0.4);
+      transform: scale(1.05);
+      transition: transform 0.6s ease;
+      background: rgba(0, 0, 0, 0.4);
   }
-  
+
   .main-header {
-    display: flex;
-    justify-content: space-between;
-    background: #cb290d;
-    padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      background: #cb290d;
+      padding: 10px 20px;
   }
-  
+
   .search-controls {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
   }
-  
+
   .search-controls input {
-    width: 200px;
-    height: 40px;
-    border-radius: 20px;
-    border: none;
-    padding: 0 20px;
-    font-size: 16px;
+      width: 200px;
+      height: 40px;
+      border-radius: 20px;
+      border: none;
+      padding: 0 20px;
+      font-size: 16px;
   }
 
   .search-controls input:hover {
-    transform: scale(0.97);
-    border: 2px solid #ababab;
-    transition: background-color 0.5s ease;
+      transform: scale(0.97);
+      border: 2px solid #ababab;
+      transition: background-color 0.5s ease;
   }
 
   .search-controls button {
-    cursor: pointer;
-    border: none;
-    background-color: none;
-    transition: 0.5s ease;
-    width: 40px;
-    height: 40px;
-    font-size: 25px;
-    border-radius: 10px;
+      cursor: pointer;
+      border: none;
+      background-color: none;
+      transition: 0.5s ease;
+      width: 40px;
+      height: 40px;
+      font-size: 25px;
+      border-radius: 10px;
   }
 
   .search-controls button:hover {
-    background-color: #626262;
-    transition: background-color 0.5s ease;
-    transform: scale(1.05);
+      background-color: #626262;
+      transition: background-color 0.5s ease;
+      transform: scale(1.05);
   }
 
   .magnifying-glass {
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    margin: 0 10px 0 0;
-    transition: 0.5s ease;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      margin: 0 10px 0 0;
+      transition: 0.5s ease;
   }
 
   .magnifying-glass:hover {
-    transition: 0.5s ease;
-    transform: scale(1.05);
+      transition: 0.5s ease;
+      transform: scale(1.05);
   }
-  
+
   .top-bar {
-    display: none;
-    justify-content: space-between;
-    align-items: center;
-    background: #cb290d;
-    padding: 10px 20px;
+      display: none;
+      justify-content: space-between;
+      align-items: center;
+      background: #cb290d;
+      padding: 10px 20px;
   }
-  
+
   .menu-toggle {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+  }
+
+  .menu-toggle span {
+      display: block;
+      width: 40px;
+      height: 4px;
+      background: #fff;
+      margin: 1px 0;
+      border-radius: 2px;
+      transition: 1.0s all ease;
+  }
+
+  .menu-toggle.open span:nth-child(1) {
+    transform: rotate(45deg) translateY(15px);
+    transition: 0.6s all ease;
   }
   
-  .menu-toggle span {
-    display: block;
-    width: 40px;
-    height: 4px;
-    background: #fff;
-    margin: 1px 0;
-    border-radius: 2px;
+  .menu-toggle.open span:nth-child(2) {
+    opacity: 0;
+    transition: 0.3s all ease;
+  }
+  
+  .menu-toggle.open span:nth-child(3) {
+    transform: rotate(-45deg) translateY(-15px);
+    transition: 0.6s all ease;
   }
 
   @media (max-width: 425px) {
-    .top-bar {
-      display: flex;
-    }
-  
-    .main-header {
-      position: fixed;
-      top: 0;
-      left: -320px;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
-      width: 280px;
-      background: #cb290d;
-      padding: 20px;
-      transition: left 0.3s ease;
-      z-index: 1001;
-    }
-  
-    .main-header.open {
-      left: 0;
-    }
-  
-    .logo img {
-      max-width: 150px;
-      height: auto;
-    }
-  
-    .search-controls {
-      flex-direction: column;
-      gap: 10px;
-      width: 100%;
-    }
-  
-    .search-controls input {
-      width: 90%;
-    }
-  
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.4);
-      z-index: 1000;
-    }
+      .top-bar {
+          display: flex;
+      }
 
-    .magnifying-glass {
-        margin: 0;
+      .main-header {
+          position: fixed;
+          top: 0;
+          left: -320px;
+          flex-direction: column;
+          align-items: center;
+          justify-content: flex-start;
+          height: 100vh;
+          width: 280px;
+          background: #cb290d;
+          padding: 20px;
+          transition: left 0.3s ease;
+          z-index: 1001;
+      }
+
+      .main-header.open {
+          left: 0;
+      }
+
+      .logo img {
+          max-width: 150px;
+          height: auto;
+      }
+
+      .search-controls {
+          flex-direction: column;
+          gap: 10px;
+          width: 100%;
+      }
+
+      .search-controls input {
+          width: 90%;
+      }
+
+      .overlay {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100vh;
+          background: rgba(0, 0, 0, 0.4);
+          z-index: 1000;
+      }
+
+      .magnifying-glass {
+          margin: 0;
       }
   }
-  
