Se arregla la comunicacion con la API, se unifica el loading, se agrega el MIN y se agrega el mensaje de error si el numero es menor o mayor al limite.

--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -12,9 +12,16 @@
 }
 
 .loading,
-.no-results {
+.no-results,
+.error-message {
   text-align: center;
   color: #adadad;
   font-size: 20px;
   margin: 25px 0;
+}
+
+.error-message {
+  color: #cb290d;
+  font-weight: bold;
+  font-size: 22px;
 }
