Se agregan los badge de tipo

--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -25,3 +25,9 @@
   font-weight: bold;
   font-size: 22px;
 }
+
+.observer-element {
+  height: 2px;
+  background: transparent;
+  margin: 10px 0;
+}
