--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -1,33 +1,35 @@
 .Pokedex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    background-color: #000;
-    margin: 0 0 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: #000000;
+  margin: 0;
+  padding: 0 0 30px 0;
 }
 
 .Pokedex h2 {
-    padding: 0 0 10px 0;
+  padding: 10px 0;
+  color: #ffffff;
+  margin: 0;
 }
 
 .loading,
-.no-results,
-.error-message {
-  text-align: center;
-  color: #adadad;
-  font-size: 20px;
-  margin: 25px 0;
+.no-results {
+text-align: center;
+color: #adadad;
+font-size: 20px;
+margin: 25px 0;
 }
 
 .error-message {
-  color: #cb290d;
-  font-weight: bold;
-  font-size: 22px;
+color: #cb290d;
+font-weight: bold;
+font-size: 22px;
 }
 
 .observer-element {
-  height: 2px;
-  background: transparent;
-  margin: 10px 0;
+height: 2px;
+background: transparent;
+margin: 10px 0;
 }
